# https---github.com-digitalcityscience-AGORA-backend

./: .gitignore  build_dev_container.sh  docker-compose-dev.yml  document.md  start_dev_container.sh
documents/: PublishGithubDocker.md
src/app/: .env  .env.example  main.py
src/app/auth/: config.py  database.py  oauth2.py  utils.py
src/app/models/: user_model.py
src/app/router/: auth.py  test.py  user.py
src/app/schemas/: user_login.py
src/docker-python-env/: Dockerfile  create_docker_image.sh  pyproject.toml
src/test/test_login/: conftest.py  test_user.py
