[tool.poetry]
name = "Python-Poetry-Env"
version = "0.1.0"
description = "Base Poetry environment for Python projects"
authors = ["ortak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
conda-lock = "^2.5.1"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
pytest = "^7.4.4"
alembic = "^1.13.1"
python-jose = "^3.3.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
black = "^23.12.1"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
